Spacing fixes: header and feature

--- a/blocks/feature/feature.css
+++ b/blocks/feature/feature.css
@@ -30,7 +30,6 @@
   font-weight: 600;
   color: var(--text-color);
   margin: 0;
-  margin-bottom: 12px;
 }
 
 .about-us-left h2.about-us-left-heading{
@@ -214,7 +213,6 @@ color: var(--body-text-color);
 
 
   .about-us-left .about-us-left-title{
-    margin-bottom: 16px;
     font-size: 18px;
     line-height: 24px;
   }
@@ -303,7 +301,6 @@ color: var(--body-text-color);
     font-size: 20px;
     font-weight: 600;
     line-height: 24px;
-    margin-bottom: 20px;
   }
 
   .about-us-left h2.about-us-left-heading {
