--- a/blocks/header/header.css
+++ b/blocks/header/header.css
@@ -1206,7 +1206,7 @@ content: '🡢';
   }
 
   .header-inner-wrapper .secondary-nav {
-    padding: 21px 0;
+    padding: 21px 0 11px;
   }
   .header-inner-wrapper .secondary-nav .secondary-header-links {
     padding-top: 24px;
@@ -1219,7 +1219,7 @@ content: '🡢';
     font-size: 20px;
   }
   .header-inner-wrapper .secondary-nav .secondary-header-links .nav-links li .button-container {
-    margin-bottom: 15px;
+    margin-bottom: 10px;
   }
   .header-inner-wrapper .secondary-nav .secondary-header-links .nav-links li .button-container a {
     font-size: 18px;
